# gilga

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: README.md  architecture.md  philosophy.md  roadmap.md  ux-design.md
src/: App.css  App.tsx  Settings.css  Settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  nostr_client.rs
