[package]
name = "gilga"
version = "0.1.0"
description = "登録不要のチャット＆SNSアプリ"
authors = ["Gilga Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "gilga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr-sdk = "0.39"
tokio = { version = "1", features = ["full"] }
directories = "5"
chrono = "0.4"

